--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@formspree/react": "^2.5.1",
     "@mui/material": "^5.16.4",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "next": "14.2.5",
     "react": "^18",
